tests/negative/traits/invoke_addr_mutability.orng
// invoke_addr_mutability.orng:18:6: error: receiver `&mut self` of method `lmao` incompatible with type `&Int`
//     y.>lmao()
//     ^
// 
trait Lol {
    fn lmao(&mut self) -> ()
}

impl Lol for Int {
    fn lmao(&mut self) -> () {
        self^ = 30
    }
}

fn main() -> Int {
    let x = 5
    let y = &x
    y.>lmao()
    x
}